# Ural_Airlines

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini
ui_tests/locators/: base_locator.py  dashboards_page_locators.py  general_locators.py  service_requests_locators.py
ui_tests/pages/: base_page.py  dashboards_page.py  login_page.py  service_requests.py
ui_tests/tests/: conftest.py  test_data.py
ui_tests/tests/dashboards_tests/: test_dashboard_page.py
ui_tests/tests/pick_list_tests/: test_pik_list_in_filter.py
